--- a/chatServer/package.json
+++ b/chatServer/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./app.js",
-    "create": "node ./init.js"
+    "init": "node ./init.js"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
